# qave

./: .gitignore  .pre-commit-config.yaml  .typos.toml  LICENSE  README.md  tox.ini
backend/: pyproject.toml
backend/src/qave/: __init__.py  _contract_version.py  api.py  builtins.py  errors.py  examples.py  io.py  notebook.py  options.py  render.py  results.py
backend/src/qave_backend/: __init__.py
backend/src/qave_backend/algorithms/: __init__.py
backend/src/qave_backend/contracts/: __init__.py  models.py  schema_export.py
backend/src/qave_backend/ingest/: __init__.py  openqasm_importer.py  qiskit_importer.py
backend/src/qave_backend/ir/: __init__.py  models.py
backend/src/qave_backend/measurement/: __init__.py  model.py
backend/src/qave_backend/observables/: __init__.py  extractor.py
backend/src/qave_backend/simulator/: __init__.py  backend_a.py  gates.py  statevector_engine.py
backend/src/qave_backend/validation/: __init__.py  reference_qiskit.py
backend/tests/: README.md
backend/tests/integration/api/: test_algorithm_payloads.py  test_animation_pipeline.py  test_trace_generation.py
backend/tests/integration/backend_a/: test_conventions.py  test_measurement_collapse.py  test_measurement_shot_replay.py  test_parity_and_determinism.py
backend/tests/unit/qave/: test_api.py  test_examples.py  test_io.py  test_notebook.py  test_options.py  test_package_exports.py  test_render.py  test_results.py
backend/tests/unit/qave_backend/contracts/: test_algorithm_trace_models.py  test_schema_export.py  test_simulation_request.py  test_step_evolution_sample.py
backend/tests/unit/qave_backend/ingest/: test_openqasm_importer.py  test_qiskit_importer.py
backend/tests/unit/qave_backend/measurement/: test_model.py
backend/tests/unit/qave_backend/observables/: test_extractor.py
backend/tests/unit/qave_backend/simulator/: test_gates.py  test_statevector_engine_unitary.py  (+1 more)
(+37 files in other folders)
